[package]
name = "projector_proc"
authors = ["katsumi143 <32640219+katsumi143@users.noreply.github.com>"]
edition = "2021"
license = "AGPL-3.0-only"
version = "0.1.0"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }

[profile.dev]
lto = false
debug = true
rpath = false
panic = "unwind"
opt-level = 0
incremental = true
codegen-units = 256
overflow-checks = true
debug-assertions = true

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = 3
incremental = false
codegen-units = 1
debug-assertions = false